--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -2,7 +2,8 @@ live_config_reload = true
 working_directory = "None"
 
 import = [
-    "~/.config/alacritty/themes/themes/horizon-dark.toml"
+    # "~/.config/alacritty/themes/themes/horizon-dark.toml"
+    "~/.config/alacritty/themes/themes/seashells.toml"
     # "~/.config/alacritty/themes/themes/smoooooth.toml"
     # "~/.config/alacritty/themes/themes/nightfox.toml"
 ]
@@ -19,7 +20,7 @@ render_timer = false
 
 [font]
 # enable_ligatures = true 
-size = 10
+size = 11
 
 [font.bold]
 family = "Hasklug Nerd Font"
